--- a/action.yml
+++ b/action.yml
@@ -25,11 +25,11 @@ runs:
       run: |
         # Prepare files list
         FILES=$(echo ${{ inputs.files }} | tr "," "\n" | xargs)
-        ZIP_FILE="${{ inputs.output }}.zip"
+        ZIP_FILE="${{ inputs.output }}"
 
         cd ${{ inputs.context }}
-        zip -qq -r $ZIP_FILE $FILES
+        zip -qq -r "${ZIP_FILE}.zip" $FILES
 
-        echo "::debug::$(unzip -l $ZIP_FILE)"
+        echo "::debug::$(unzip -l "${ZIP_FILE}.zip")"
 
         echo "::set-output name=zip_file::$ZIP_FILE"
